--- a/webtest/rdc/mobile/templates/mobile/_hostinfohelpers.html
+++ b/webtest/rdc/mobile/templates/mobile/_hostinfohelpers.html
@@ -1,6 +1,6 @@
 {% macro render_info(info) %}
 <li class={{ info.state}} data-role="list-divider">{{ info.date }}<span class=ui-li-count>{{ info.temperature }}</span></li>
-<li><a href={{ url_for('rdc.plot', host_id=info.id) }}>
+<li><a href={{ url_for('mobile.plot', host_id=info.id) }}>
     <h3>{{ info.name }}</h3>
     <p><strong>Etat:</strong>{{ info.state }}</p>
     <p><strong>Solde:</strong>{{ info.balance }} <strong>Expiration:</strong>{{ info.expiration }}</p>
