--- a/webtest/rdc/mobile/templates/mobile/index.html
+++ b/webtest/rdc/mobile/templates/mobile/index.html
@@ -1,5 +1,5 @@
-{% extends "rdc/mobile_layout.html" %}
-{% from "rdc/_hostinfohelpers.html" import render_info %}
+{% extends "mobile/mobile_layout.html" %}
+{% from "mobile/_hostinfohelpers.html" import render_info %}
 {% block body %}
   <ul data-role="listview">
 		{% for info in host_informations %}
