--- a/webtest/rdc/mobile/templates/mobile/register.html
+++ b/webtest/rdc/mobile/templates/mobile/register.html
@@ -1,4 +1,4 @@
-{% extends "rdc/layout.html" %}
+{% extends "mobile/layout.html" %}
 {% from "_formhelpers.html" import render_field %}
 {% block title %}WebTest{% endblock %}
 {% block body %}
