--- a/webtest/rdc/mobile/templates/mobile/404.html
+++ b/webtest/rdc/mobile/templates/mobile/404.html
@@ -1,4 +1,4 @@
-{% extends "rdc/mobile_layout.html" %}
+{% extends "mobile/mobile_layout.html" %}
 {% block title %}Page Not Found{% endblock %}
 {% block body %}
   <h1>Page Not Found</h1>
