--- a/webtest/rdc/mobile/templates/mobile/login.html
+++ b/webtest/rdc/mobile/templates/mobile/login.html
@@ -1,5 +1,5 @@
-{% extends "rdc/mobile_layout.html" %}
-{% from "rdc/_formhelpers.html" import render_field %}
+{% extends "mobile/mobile_layout.html" %}
+{% from "mobile/_formhelpers.html" import render_field %}
 {% block body %}
   <form method="post" class="ui-body ui-body-a ui-corner-all">
     <fieldset>
