Added visible button.

--- a/rdc_server/rdc/mobile/templates/mobile/configuration_forms.html
+++ b/rdc_server/rdc/mobile/templates/mobile/configuration_forms.html
@@ -14,6 +14,7 @@
     <fieldset>
         <div data-role="fieldcontain">
             {{ render_field(form.enabled) }}
+            {{ render_field(form.is_visible) }}
             {{ render_field(form.alert_warning_value) }}
             {{ render_field(form.alert_critical_value) }}
             {{ render_field(form.notifiers) }}
