Added sms alerts and alerts value in the interface.

--- a/rdc_server/rdc/mobile/static/mobile.css
+++ b/rdc_server/rdc/mobile/static/mobile.css
@@ -44,6 +44,12 @@ ul#lang {
   color: orange;
 }
 
+.txt-warning {
+	color: yellow;
+}
+.txt-critical {
+	color: red;
+}
 .warning {
 	background: none;
 	background-color: yellow;
