--- a/rdc_server/rdc/mobile/templates/mobile/_hostinfohelpers.html
+++ b/rdc_server/rdc/mobile/templates/mobile/_hostinfohelpers.html
@@ -4,6 +4,7 @@
     <h3>{{ info.name }}</h3>
     <p><strong>Etat:</strong>{{ info.state }}</p>
     <p><strong>Solde:</strong>{{ info.balance }} <strong>Expiration:</strong>{{ info.expiration }}</p>
+		<p><strong>Alert:</strong>{{ info.warning }} <strong>Critique:</strong>{{ info.critical }}</p>
     <p class="ui-li-aside"><strong>{{ info.time }}</strong></p>
 </a></li>
 {% endmacro %}
